--- a/install.html
+++ b/install.html
@@ -58,9 +58,13 @@
         <h1>How to Install Taurus AI</h1>
         <p>Follow these simple steps to install Taurus AI on your system:</p>
         
-        <a href="https://www.icloud.com/shortcuts/9439b8db3bc941ceaa1b0b1e4d46de2a" class="download-button">Download Taurus AI</a>
+        <a 
+href="https://www.icloud.com/shortcuts/997abe36d7fd4b0ba1f78f37d98617df" 
+class="download-button">Download Taurus AI</a>
         <a href="https://www.icloud.com/shortcuts/73b11ab1e70d42f3b9b98c818ee10087" class="download-button">Download S-GPT Encoder</a>
-        
+        <a 
+href="https://www.icloud.com/shortcuts/7d29634ff2c24aef98916b7a3033497f" 
+class="download-button">Download Taurus Encoder</a>
         <p><strong>Step 1:</strong> Install Taurus AI</p>
         <div class="code-block">
             To install Taurus AI, you need to click Download Taurus AI. Once the Download has finished, you will see a screen asking you to enter an API Key. Go to this link: <a href="https://aistudio.google.com/prompts/new_chat?gad_source=1&gbraid=0AAAAACn9t67lTKJu_idCKkB7hsaiyeajk&gclid=Cj0KCQiAq-u9BhCjARIsANLj-s36h9ELgdwcgmbu1r6wJrUlkejSofzFv7kaP34h3Nv95VXPe0ws9CIaAoaiEALw_wcB">Key Generator</a> Then follow the photos below
@@ -75,7 +79,9 @@
         </div>
         <p><strong>Step 3:</strong> Finish Up</p>
         <div class="code-block">
-            Install the S-GPT Encoder shortcut. After that, you should be good to go!
+            Install the S-GPT Encoder & Taurus Encoder shortcuts. After 
+that, you should be good to go! (The Taurus Encoder shortcut may ask you 
+for a NTFY server url, we will cover that in a later release)
         </div>
         <p><strong>Step 4:</strong> Run Taurus AI</p>
         <div class="code-block">
