--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <p>Taurus AI is designed to provide smart, efficient, and intuitive assistance, whether you need help with tasks, automation, or decision-making.</p>
         <h3>What is Taurus AI?</h3>
         <p>Taurus AI is a AI assistant based on the S-GPT framework. S-GPT is what allows Taurus to run on your watch, HomePod, HomePod Mini, Apple TV, iPhone, I could go on.</p>
-        <a href="#" class="cta-button">Get Started</a>
+        <a href="https://github.com/rnaniqw2/Taurus/wiki/Installation" class="cta-button">Get Started</a>
     </div>
     <script>
         // Ensuring there are no duplicate variable declarations
